fixing spacing

--- a/src/Home.css
+++ b/src/Home.css
@@ -9,7 +9,7 @@
 }
 
 #Home{
-    padding-top: 5rem;
+    padding-top: 6rem;
     font-family: "Playfair Display", serif;
     font-style: normal;
     font-optical-sizing: auto;
